--- a/partials/AuthenticationPage.html
+++ b/partials/AuthenticationPage.html
@@ -11,12 +11,14 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width">
     </head>
     <body>
-        <div style="background-color:cyan">
-            <p style="font-size:72px">Welcome to __________ please sign in!!</p>
-            <p style="font-size:24px;font-weight:bold">Username: <input type=text></p>
-            <p style="font-size:24px;font-weight:bold">Password: <input type=text></p>
+        <div style="background-color:#88E7D3">
+            <p style="font-size:72px;text-align:center">Welcome to <span style="font-weight:bold">Pitch In!</span></p>
+            <p style="text-align:center;font-size:32px">Please sign in!!</p>
+            <p style="font-size:24px;font-weight:bold;text-align:center">Username: <input type=text></p>
+            <p style="font-size:24px;font-weight:bold;text-align:center">Password: <input type=text></p>
+            <p style='text-align:center;'><button type="button">Submit</button></p>
             <p></p>
-            <p>Dont have an account? <a href="www.google.com">Sign Up</a> Now!</p>
+            <p style='text-align:center'>Don't have an account? <a href="www.google.com">Sign Up</a> Now!</p>
         </div>
     </body>
 </html>
