--- a/partials/newEventPage.html
+++ b/partials/newEventPage.html
@@ -11,11 +11,12 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width">
     </head>
     <body>
-        <div style="background-color:gray"><p style="font-size:36px;font-weight:bold;">Enter the information for your event:</p>
-            <p>Date: <input type="date"></p>
-            <p>Time: <input type="time"></p>
-            <p>Location: <input type="text"></p>
-            <p>Description: <input type="text"></p>
+        <div style="background-color:gray"><p style="font-size:36px;font-weight:bold;text-align:center;">Enter the information for your event:</p>
+            <p style='text-align:center;'>Date: <input type="date"></p>
+            <p style='text-align:center;'>Time: <input type="time"></p>
+            <p style='text-align:center;'> Location: <input type="text"></p>
+            <p style='text-align:center;'>Description: <input type="text"></p>
+            <p style='text-align:center;'><button type="button">Submit</button></p>
         
         </div>
     </body>
