got partials being swapped in and out. Now we have the shell for a great SPA!
Signed-off-by: Justin Hamilton <enigmarm@gmail.com>

--- a/css/app.css
+++ b/css/app.css
@@ -15,6 +15,10 @@ header {
 	background-color: #5BA0D0;
 }
 
+section#partialWrapper {
+	padding: 10px;
+}
+
 #logo {
 	font-family: 'Cinzel Decorative', cursive;
 	float: left;
