Added an animations.css file to store all animations & transitions. Created a splash page. Probably won't use it though. Sketched up the map.html view. Ready for a map to be thrown in. Animated the nav entrance.
Signed-off-by: Justin Hamilton <enigmarm@gmail.com>

--- a/partials/map.html
+++ b/partials/map.html
@@ -1,3 +1,31 @@
 <div>
 	<h2>Check out all of the service going on around you</h2>
+	<div id="mapContainer">
+
+	</div>
+	<hr>
+	<table>
+		<thead>
+			<th>&nbsp;</th>
+			<th>Details</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Type: </td>
+				<td> Service</td>
+			</tr>
+			<tr>
+				<td>Date: </td>
+				<td> Dec 11, 2013</td>
+			</tr>
+			<tr>
+				<td>Location: </td>
+				<td> 1.5 miles from you. <a href="">Get the address.</a></td>
+			</tr>
+			<tr>
+				<td>Activity: </td>
+				<td> Habitat for Humanity will be framing a house in the frigid cold. We won't have to stay out in the cold & get frostbite if you come lend a hand!</td>
+			</tr>
+		</tbody>
+	</table>
 </div>
