--- a/css/app.css
+++ b/css/app.css
@@ -58,7 +58,13 @@ nav ul#navItems {
 	padding: 0.5em;
 	font-size: 1.8em;
 	text-align: center;
-	opacity: 0.5
+	opacity: 0.8;
+	color: #fff;
+}
+
+#navItems li:hover {
+	opacity: 1;
+	cursor: pointer;
 }
 
 #navItems li.active {
