--- a/partials/map.html
+++ b/partials/map.html
@@ -3,6 +3,7 @@
 	<div id="mapContainer">
 
 	</div>
+	<button onclick="initialize()"> make map</button>
 	<hr>
 	<table class="centerElem" id="mapDetailTable">
 		<thead>
