New Login Paritial

--- a/partials/login.html
+++ b/partials/login.html
@@ -1,3 +1,28 @@
-<div>
-	<h2>Your stats here</h2>
+<div style="margin:0cm 2cm 0cm 2cm;">
+<h1 style="margin:1cm 1cm 0cm 1cm;">Login</h1>
+	<form>
+ <input type="text" placeholder="Email" name="email" style="font-size:25px"><br>
+ <input type="password" placeholder="Password" name="pwd" style="font-size:25px"><br><br>
+
+ <input type="submit" value="Login" style="font-size:25px; border: 1px outset blue"><br>
+
+
+<hr>
+</form>
+<h1 style="margin:0cm 1cm 0cm 1cm;">Sign Up</h1>
+ <form>
+  <input type="text" placeholder="Email" name="email" style="font-size:25px"><br>
+  <input type="password" placeholder="Password" name="pwd" style="font-size:25px"><br> 
+  <input type="text" name="fname" placeholder="First name" style="font-size:25px"><br>
+  <input type="text" name="lname" placeholder="Last name" style="font-size:25px"><br>
+  <select style="font-size:25px">
+  <option value="Group A">Group A</option>
+  <option value="Group B">Group B</option>
+  <option value="Group C">Group C</option>
+  <option value="Group D">Group D</option>
+</select><br><br>
+  <input type="submit" value="Sign Up" style="font-size:25px;  border: 1px outset blue">
+</form> 
+
+
 </div>
