--- a/partials/login.html
+++ b/partials/login.html
@@ -1,17 +1,19 @@
+
+
 <div style="margin:0cm 2cm 0cm 2cm;">
-<h1 style="margin:1cm 1cm 0cm 1cm;">Login</h1>
+<h2 style="margin:1cm 1cm 0cm 1cm;">Login</h2>
 	<form>
- <input type="text" placeholder="Email" name="email" style="font-size:25px"><br>
+ <input type="text" placeholder="Email" id="email1" name="email" style="font-size:25px"><br>
  <input type="password" placeholder="Password" name="pwd" style="font-size:25px"><br><br>
 
- <input type="submit" value="Login" style="font-size:25px; border: 1px outset blue"><br>
+ <input  type="button" onclick="save()" value="Login" style="font-size:25px; border: 1px outset blue"><br>
 
 
 <hr>
 </form>
-<h1 style="margin:0cm 1cm 0cm 1cm;">Sign Up</h1>
+<h2 style="margin:0cm 1cm 0cm 1cm;">Sign Up</h2>
  <form>
-  <input type="text" placeholder="Email" name="email" style="font-size:25px"><br>
+  <input type="text" placeholder="Email" id="email2" name="email" style="font-size:25px"><br>
   <input type="password" placeholder="Password" name="pwd" style="font-size:25px"><br> 
   <input type="text" name="fname" placeholder="First name" style="font-size:25px"><br>
   <input type="text" name="lname" placeholder="Last name" style="font-size:25px"><br>
@@ -21,8 +23,9 @@
   <option value="Group C">Group C</option>
   <option value="Group D">Group D</option>
 </select><br><br>
-  <input type="submit" value="Sign Up" style="font-size:25px;  border: 1px outset blue">
+  <input type="button" onclick="save()" value="Sign Up" style="font-size:25px;  border: 1px outset blue">
 </form> 
-
+<div id="results">
+</div>
 
 </div>
