--- a/partials/login.html
+++ b/partials/login.html
@@ -6,7 +6,7 @@
  <input type="text" placeholder="Email" id="email1" name="email" style="font-size:25px"><br>
  <input type="password" placeholder="Password" name="pwd" style="font-size:25px"><br><br>
 
- <input  type="button" onclick="save()" value="Login" style="font-size:25px; border: 1px outset blue"><br>
+ <input class="btn primary width100" type="button" onclick="save()" value="Login" ><br>
 
 
 <hr>
