--- a/partials/map.html
+++ b/partials/map.html
@@ -3,7 +3,7 @@
 	<div id="mapContainer">
 
 	</div>
-	<button onclick="initialize()"> make map</button>
+	<button class="btn primary width100" id="mapBtn"onclick="initialize()">Refresh Map</button>
 	<hr>
 	<table class="centerElem" id="mapDetailTable">
 		<thead>
